# megaburn

./: .gitignore  KNOWNISSUES.md  NOTES.md  README.md  TODO.md  filesync.json  package-lock.json  package.json
bitburner/: megaburn.txt
farmburn/: eslint.config.mjs  package.json  (+2 more)
ipfish/: .gitignore  Cargo.toml  NOTES.md  README.md  TODO.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vite.config.js
ipfish/.cargo/: config.toml
ipfish/rust/: bitset.rs  board.rs  board_from_string.rs  count_liberties_of_group.rs  evaluate_move.rs  evaluate_moves.rs  final_score.rs  get_adjacent_points.rs  get_legal_moves.rs  helpless_minimax_strategy.rs  is_in_atari.rs  is_self_capture.rs  lib.rs  make_move.rs  mc_lines.rs  mcts_strategy.rs  minimax_ab_strategy.rs  minimax_mc_filtered_strategy.rs  minimax_mc_strategy.rs  minimax_score.rs  montecarlo_score.rs  newplayer.rs  pass_move.rs  pick_strategy.rs  player.rs  point_state.rs  score.rs  violates_superko.rs
ipfish/rust/benches/: montecarlo_simulation.rs
ipfish/rust/examples/: mcexample.rs
ipfish/src/: Game.ts  analysis.ts  analysisWorker.ts  autoPlay.ts  game.ts  getAnalysis.test.ts  getAnalysis.ts  getBoardFromAPI.ts  getCurrentTurn.ts  globals.d.ts  go.js  longfunc.ts  main.ts  moveString.ts  sum.ts  types.d.ts
ipfish/src/tests/: basicCapture.test.ts  moreSelfCapture.test.ts  selfCapture.test.ts  utils.ts
ipfish/src/ui/: GoBoard.tsx  GoPoint.tsx  IpFish.tsx  PassButton.tsx  RouletteCell.tsx  RouletteHelper.tsx
ipfish/src/ui/css/: IpFish.module.css
ipfish/src/worker/: analysis.ts  longfunc.ts
(+39 files in other folders)
