[package]
name = "ipfish"
version = "1.0.0"
authors = ["Paul Dejean <paulcdejean@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
path = "rust/lib.rs"

[dependencies]
js-sys = "0.3.77"
rand = "0.9.0"
wasm-bindgen = "0.2.100"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
