[package]
name = "ipfish"
version = "1.0.0"
authors = ["Paul Dejean <paulcdejean@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
path = "rust/lib.rs"

[dependencies]
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
rand = { version = "0.9", default-features = false }
rand_pcg = "0.9.0"
rustc-hash = "2.1.1"
rand_chacha = "0.9.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dev-dependencies]
divan = "0.1.17"
rand = "0.9"

[[bench]]
path = "rust/benches/montecarlo_simulation.rs"
name = "montecarlo_simulation"
harness = false

[[example]]
path = "rust/examples/mcexample.rs"
name = "mcexample"
